--- a/src/components/defer/TwitchLivestream.astro
+++ b/src/components/defer/TwitchLivestream.astro
@@ -1,12 +1,23 @@
 ---
-import { Icon } from 'astro-icon/components'
-import type { TwitchLivestream } from '@types'
+import { Icon } from "astro-icon/components"
+import type { TwitchLivestream } from "@types"
 
 export const prerender = false
 
 const livestreamData = await Astro.locals.runtime.env.STORE.get("TWITCH_LIVESTREAM", "json") as TwitchLivestream | null
 const isLive = Object.keys(livestreamData || {}).length > 0
 ---
+
+<a class={isLive && "on-air" || ''} href="https://twitch.tv/studiorvandco" title="Twitch">
+    <Icon name={"fa6-brands:twitch"} />
+</a>
+
+<script define:vars={{ isLive, livestreamData }} is:inline>
+    if (!isLive) return
+    document.dispatchEvent(
+        new CustomEvent("twitch", { detail: livestreamData })
+    )
+</script>
 
 <style lang="scss">
     a {
@@ -53,14 +64,3 @@ const isLive = Object.keys(livestreamData || {}).length > 0
         }
     }
 </style>
-
-<a class={isLive && 'on-air' || ''} href="https://twitch.tv/studiorvandco" title="Twitch">
-    <Icon name={"fa6-brands:twitch"} />
-</a>
-
-<script define:vars={{ isLive, livestreamData }} is:inline>
-    if (!isLive) return
-    document.dispatchEvent(
-        new CustomEvent('twitch', { detail: livestreamData })
-    )
-</script>
