--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,16 @@
 ---
-import Layout from '@layouts/Layout.astro'
-import TwitchLivestreamToast from '@components/TwitchLivestreamToast.astro'
-import Teaser from '@components/Teaser.astro'
-import Productions from '@components/Productions.astro'
-import Projects from '@components/Projects.astro'
-import Association from '@components/Association.astro'
-import Contact from '@components/Contact.astro'
+import Layout from "@layouts/Layout.astro"
+import TwitchLivestreamToast from "@components/TwitchLivestreamToast.astro"
+import Teaser from "@components/Teaser.astro"
+import Productions from "@components/Productions.astro"
+import Projects from "@components/Projects.astro"
+import Association from "@components/Association.astro"
+import Contact from "@components/Contact.astro"
 ---
 
 <Layout>
 	<TwitchLivestreamToast />
-	<Teaser />
+	<Teaser id="home" />
 	<Productions />
 	<Projects />
 	<Association />
