--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,8 +4,8 @@ import { AstroFont } from "astro-font"
 import Background from "@assets/img/background.webp"
 import Thumbnail from "@assets/img/thumbnail.webp"
 import LanguageSelection from "@components/LanguageSelection.astro"
-import Header from "@layouts/Header.astro"
-import Footer from "@layouts/Footer.astro"
+import Header from "@components/Header.astro"
+import Footer from "@components/Footer.astro"
 import Translations from "@assets/json/translations.json"
 
 const site = Astro.site ?? new URL("https://rvandco.fr")
